Resolves: tdf#125270 clicking LinkButton should launch link

The gtk one does, but the gen one overwrite the default
handler instead of adding to it

Change-Id: I40c760821cb46283c00624797e97d601babd6200
Reviewed-on: https://gerrit.libreoffice.org/73339
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>